# golemdb-sqlalchemy

./: .gitignore  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  demo_dialect_usage.py  pyproject.toml  sqlalchemy_example.py  sqlalchemy_golembase_example.py  test_dialect.py  test_dialect_comprehensive.py  test_introspection.py  test_simple_queries.py
docs/: MAPPING.md  QUERY_TUTORIAL.md
golemdb_sql/: .env.example  README.md  example.py  example_usage.py  pyproject.toml  test_hybrid_filtering.py  test_indexed_column_check.py  test_negative_integers.py  test_ordering_debug.py  test_query_logging.py  test_relation_fix.py
golemdb_sql/src/golemdb_sql/: __init__.py  connection.py  connection_parser.py  cursor.py  filters.py  query_translator.py  schema_manager.py  types.py
golemdb_sql/tests/: __init__.py  conftest.py  mock_golem_client.py  test_annotation_naming_strategy.py  test_connection.py  test_connection_parser.py  test_cursor.py  test_decimal_precision_scale.py  test_exceptions.py  test_filters.py  test_integration.py  test_query_translator.py  test_row_serializer.py  test_schema_manager.py  test_signed_integer_encoding.py  test_types.py
sqlalchemy_golembase/src/sqlalchemy_dialects_golembase/: __init__.py  compiler.py  dialect.py  types.py
testapp/: .env.example  README.md  init_connections.py  pyproject.toml  run_server.py  schema.sql  simple_api.py
testapp/src/testapp/: __init__.py  crud.py  database.py  golembase_crud.py  main.py  models.py
